# learn-data-munging

./: .gitignore  001 - 10 minutes to pandas.ipynb  001.ipynb  01.001 - 10+ minutes to pandas.ipynb  02.000 (optional) Setup_Spark_in_Google_Colab.ipynb  02.001 - 10+ minutes to pandas.ipynb  02.001 - 10+ minutes to pyspark.ipynb  02.002 - Exploratory Data Analysis - Fun with the Movielens dataset using PySpark.ipynb  02.002 - Spark Practice Exercises.ipynb  03.000 (optional) Setup_Spark_in_Google_Colab.ipynb  03.001 - 10+ minutes to dask.ipynb  03.002 - Exploratory Data Analysis - Fun with the Movielens dataset using PySpark.ipynb  04.001 - 10+ minutes to dask.ipynb  05.001 - 10+ minutes to polars.ipynb  06.001 - 10+ minutes to pyArrow and DataFusion.ipynb  HOW TO 'Open in Colab'.md  LICENSE  README.md  numbered_headings.css  numbered_headings.md  xx detour - numbered_headings.md
00-Python-Collections/: 00.01 Data-Wrangling-with-Plain-Old-Python.ipynb  00.02 Playing with Itertools.ipynb  00.03 Fun with Functools.ipynb  00.04 Practice Questions.ipynb  01.01 Data-Wrangling-with-Plain-Old-Python.ipynb  01.011 Comparing Dictionaries Named Tuples and Data Classes.ipynb  01.02 Playing with Itertools.ipynb  01.03 Fun with Functools.ipynb  01.04 Practice Questions.ipynb  01.045 Practice-List-Comprehensions.ipynb  01.05 An Introduction to CUDA.ipynb  README.md
sidebars/quick-datafusion-ballista-aside/ballista-datafusion/ballista-datafusion-example/: Cargo.toml
sidebars/quick-datafusion-ballista-aside/ballista-datafusion/ballista-datafusion-example/src/: main.rs
(+35 files in other folders)
