[package]
name = "ballista-datafusion-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "*"
windows-targets = "*"
futures-channel = "*"
num-integer = "*"
futures-task = "*"
unicode-segmentation = "*"
which = "*"
arrow = "*"
ballista = "*"
